# cellular-manager

./: CHANGELOG.md  Makefile.am  autogen.sh  configure.ac
.github/: AGENTIC_DEV_README.md  CODEOWNERS  DOCUMENTATION_GUIDE.md  README.md  copilot-instructions.md
.github/agents/: cellular-manager.agent.md
.github/instructions/: build-system.instructions.md  c-embedded.instructions.md  cpp-testing.instructions.md  shell-scripts.instructions.md
.github/knowledge/: reference-data.md
.github/skills/code-review/: SKILL.md
.github/skills/code-review/references/: checklist.md  common-pitfalls.md  safety-patterns.md
.github/skills/incident-analysis/: SKILL.md
.github/skills/quality-checker/: SKILL.md
.github/skills/safety-analyzer/: SKILL.md
.github/workflows/: L1-tests.yml  native-build.yml
config/: RdkCellularManager.xml
cov_docker_script/: README.md  component_config.json  configure_options.conf
docs/: README.md  architecture.md  developer-playbook.md  onboarding.md  troubleshooting.md  workflows.md
docs/reference/: callbacks.md  hal-api.md  tr181-matrix.md
radio_conditions_analysis/data/: RadioConditions_XLE_XB_mac_jun3.csv  XB_SSH_Jump_Access.md  xle_access_results.csv  xle_radio_env_scoring_analysis.csv  xle_radio_env_scoring_analysis_results.txt  xle_radio_env_speedtest_data.csv
radio_conditions_analysis/reports/: XLE_Accessible_Devices_Report.md  X_RDK_BandInfo_Scoring_Analysis.md  X_RDK_CellCongestion_Analysis_Report.md  X_RDK_RadioEnvConditions_Analysis_Report.md  X_RDK_RadioEnvConditions_analysis.md  X_RDK_RadioEnvConditions_speedtest_analysis.md  X_RDK_WeightComparison_35_vs_25_Analysis.md  all_parameter_evaluation_summary.md
radio_conditions_analysis/scripts/: analyze_radio_env_scoring.py  collect_xle_metrics.sh
source/: Makefile.am
source/CellularManager/: Makefile.am  cellular_hal.c  cellular_hal.h  cellular_hal_qmi_apis.c  cellular_hal_qmi_apis.h  cellular_hal_utils.h  cellularmgr_bus_utils.c  cellularmgr_bus_utils.h  cellularmgr_cellular_apis.c  cellularmgr_cellular_apis.h  cellularmgr_cellular_internal.c  cellularmgr_main.c  cellularmgr_sm.c  cellularmgr_sm.h
source/TR-181/middle_layer_src/: cellularmgr_cellular_dml.c  cellularmgr_cellular_dml.h  cellularmgr_cellular_webconfig_api.c  cellularmgr_cellular_webconfig_api.h  cellularmgr_plugin_main.c  cellularmgr_rbus_dml.c  cellularmgr_rbus_dml.h  cellularmgr_rbus_events.c  cellularmgr_rbus_events.h  cellularmgr_utils.c
source/test/: Makefile.am  cellmgr_bus_utils_test.cpp  cellmgr_cellular_apis_test.cpp  cellmgr_mock.cpp  cellmgr_mock.h  cellmgr_rbus_events_test.cpp  cellmgr_sm_test.cpp  cellularmgr_cellulardml.cpp  cellularmgr_webconfig_api.cpp  gtest_main.cpp  run_ut.sh
source/test/mocks/: cellular_api_mock.cpp  cellular_api_mock.h  cellular_rbusevent_mock.cpp  cellular_rbusevent_mock.h  cellular_sm_mock.cpp  cellular_sm_mock.h
systemd_units/: RdkCellularManager.service  RdkCellularManagerLite.service
